change tha folder

--- a/artist_detail.html
+++ b/artist_detail.html
@@ -4,7 +4,7 @@
     <title>ArtistDetails</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="artistdetail.css">
+    <link rel="stylesheet" href="artist detail/artistdetail.css">
 
  
 
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     
-    <a class="navbar-brand" href="" ><i class="bi bi-asterisk"></i>  Craft Lanka</a>
+    <a class="navbar-brand" href="all craft.html" ><i class="bi bi-asterisk"></i>  Craft Lanka</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,7 +25,7 @@
         </li>
          </li>
         <li class="nav-item">
-          <a class="nav-link" href="all craft/all craft.html">Shop</a>
+          <a class="nav-link" href="all craft.html">Shop</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Artisans</a>
@@ -57,7 +57,7 @@
          <a href="#" class="class navbar-brand  "><i class="bi bi-suit-heart-fill "></i></a>
            <a class="navbar-brand" href="#"> <i class="bi bi-bag-fill"></i></a>
         
-         <a class="navbar-brand" href="#"></a>
+         <a class="navbar-brand" href="login.html"></a>
          <button type="button" class="btn btn-outline-secondary btn-sm" onclick=""><i class="bi bi-person-circle"></i></button>
         </div>
     </li>
@@ -66,7 +66,7 @@
   </div>
 </nav>
           <div class="center">
-            <img src="download1.jpeg">
+            <img src="artist detail/download1.jpeg">
             <h6>Chandrika Silva</h6>
             <p>Pottery Artist<br>Colombo,Sri Lanka</p>
             <button class="btn-outline-secondary" type="button" onclick="">Follow</button>
@@ -95,25 +95,25 @@
               <h4>Collections</h4>
               <div class="row">
                <div class="column">
-                  <img src="images (6).jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/images (6).jpeg " style="width:100%"  class="hover-shadow cursor">
                 </div>
                 <div class="column">
-                  <img src="images.jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/images.jpeg" style="width:100%"  class="hover-shadow cursor">
                 </div>
                 <div class="column">
-                  <img src="images (3).jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/images (3).jpeg" style="width:100%"  class="hover-shadow cursor">
                 </div>
                 <div class="column">
-                  <img src="download.jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/download.jpeg" style="width:100%"  class="hover-shadow cursor">
                 </div>
                 <div class="column">
-                  <img src="images (5).jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/images (5).jpeg " style="width:100%"  class="hover-shadow cursor">
                 </div>
                 <div class="column">
-                  <img src="images (1).jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/images (1).jpeg" style="width:100%"  class="hover-shadow cursor">
                 </div>
                 <div class="column">
-                  <img src="images (4).jpeg" style="width:100%"  class="hover-shadow cursor">
+                  <img src="artist detail/images (4).jpeg " style="width:100%"  class="hover-shadow cursor">
                 </div>
               </div>
             </section>
@@ -213,7 +213,7 @@
              <div class="col-lg-5">
                <div class="media">
               <a class="pull-left" href="#">
-                <img class="media-object dp img-circle" src="images pr 2.jpeg" style="width: 100px;height:100px;">
+                <img class="media-object dp img-circle" src="artist detail/images pr 2.jpeg " style="width: 100px;height:100px;">
               </a>
                <div class="media-body">
                 <h4 class="media-heading">Anika perera <br><small>2 months ago</small></h4>
@@ -228,7 +228,7 @@
              <div class="col-lg-5">
                <div class="media">
               <a class="pull-left" href="#">
-                <img class="media-object dp img-circle" src="download (1).jpeg" style="width: 100px;height:100px;">
+                <img class="media-object dp img-circle" src="artist detail/mmm.jpeg" style="width: 100px;height:100px;">
               </a>
                <div class="media-body">
                 <h4 class="media-heading">Rohan Fernando <br><small>3 months ago</small></h4>
@@ -244,7 +244,7 @@
              <div class="col-lg-4 ">
                <div class="media">
               <a class="pull-left" href="#">
-                <img class="media-object dp img-circle" src="download pr1.jpeg" style="width: 100px;height:100px;">
+                <img class="media-object dp img-circle" src="artist detail/download pr1.jpeg" style="width: 100px;height:100px;">
               </a>
                <div class="media-body">
                 <h4 class="media-heading">Nadia De Silva <br><small>4 months ago</small></h4>
