--- a/all craft.html
+++ b/all craft.html
@@ -4,7 +4,7 @@
     <title>All Crafts</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style craft.css">
+    <link rel="stylesheet" href="all craft/style craft.css">
     
 
 
@@ -71,7 +71,7 @@
 <div class="tab">
   <button class="tablinks" onclick="" ><b>Refine</b></button>
   <button class="tablinks" onclick=""><b>Craft Type</b></button>
-    <form action="/action_page.php" id="checkbox">
+    <form action="action_page.php" id="checkbox">
   <input type="checkbox" id="items1" name="items1" value="pottery">
   <label for="items1"> Pottery</label><br><br>
   <input type="checkbox" id="items2" name="items2" value="Wood Carvings">
@@ -118,28 +118,28 @@
     <div class="continer">
       <div class="row">
        <div class="card mx-2  col-3" style="width: 12rem;" >
-  <img src="images vase.jpeg" class="card-img-top" alt="...">
+  <img src="all craft/images vase.jpeg " class="card-img-top" alt="...">
   <div class="card-body">
     <div class="card-title"><b>Handmade Ceramic vase</b> </div>
         <p class="card-text">By Artisan Kamal</p>
   </div>
 </div>
  <div class="card mx-2 col-3" style="width: 12rem;">
-  <img src="images (2)elephent.jpeg" class="card-img-top" alt="...">
+  <img src="all craft/images (2)elephent.jpeg " class="card-img-top" alt="...">
   <div class="card-body">
     <div class="class card-title"><b>Intricately Carved Wooden Elephant</b> </div>
     <p class="card-text"> By Artisan Rohan</p>
   </div>
 </div>
  <div class="card mx-2 col-3" style="width: 12rem;">
-  <img src="download shole.jpeg" class="card-img-top" alt="...">
+  <img src="all craft/download shole.jpeg " class="card-img-top" alt="...">
   <div class="card-body">
     <div class="class-title"><b>Traditional Batik Scarf</b></div>
     <p class="card-text">By Artisan Anika</p>
   </div>
 </div>
  <div class="card mx-2 col-3" style="width: 12rem;">
-  <img src="download.jpeg"card-img-top" alt="...">
+  <img src="all craft/download.jpeg"card-img-top" alt="...">
   <div class="card-body">
     <div class="class-title"><b>Silver Filligree Earrings</b></div>
     <p class="card-text">By Artisan Devika</p>
