--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
           <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Craft Lanka</title>
-    <link rel="stylesheet" href="style signup.css">
+    <link rel="stylesheet" href="signup/style signup.css ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     
-    <a class="navbar-brand" href="all craft/all craft.html" ><i class="bi bi-asterisk"></i>  Craft Lanka</a>
+    <a class="navbar-brand" href="all craft.html" ><i class="bi bi-asterisk"></i>  Craft Lanka</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -37,7 +37,7 @@
         </li><br>
         <button type="button" class="btn btn-outline-secondary btn-sm">
           <li class="nav-item">
-          <a class="nav-link" href="#">Signin</a>
+          <a class="nav-link" href="login.html">Signin</a>
         </li>
         </button>
       </ul>
