--- a/artist_detail.html
+++ b/artist_detail.html
@@ -28,10 +28,10 @@
           <a class="nav-link" href="all craft.html">Shop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Artisans</a>
+          <a class="nav-link" href="artist_detail.html">Artisans</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#About">About</a>
+          <a class="nav-link" href="About">About</a>
       </ul>
       </div>
       <div class=" navbar bg-body-tertiary" id="navbarText">
@@ -57,8 +57,8 @@
          <a href="#" class="class navbar-brand  "><i class="bi bi-suit-heart-fill "></i></a>
            <a class="navbar-brand" href="#"> <i class="bi bi-bag-fill"></i></a>
         
-         <a class="navbar-brand" href="login.html"></a>
-         <button type="button" class="btn btn-outline-secondary btn-sm" onclick=""><i class="bi bi-person-circle"></i></button>
+         <a class="navbar-brand" href="login.html"><i class="bi bi-person-circle"></i></a>
+         
         </div>
     </li>
          </nav>
