--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <a class="nav-link" href="all craft.html">Shop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Artisans</a>
+          <a class="nav-link" href="artist_detail.html">Artisans</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">About Us</a>
+          <a class="nav-link" href="all craft.html">About Us</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
@@ -59,8 +59,8 @@
         <div class="container">
            <a class="navbar-brand" href="#"> <i class="bi bi-bag-fill"></i></a>
         
-         <a class="navbar-brand" href="login.html"></a>
-         <button type="button" class="btn btn-outline-secondary btn-sm" onclick="" ><i class="bi bi-person-circle"></i></button>
+         <a class="navbar-brand" href="login.html"><i class="bi bi-person-circle"></i></a>
+         
         </div>
     </li>
          </nav>
